k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "hello-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  rules:
  - host: bmi.konservatif.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bmi-calculator
            port: 
              number: 80
        
  - host: kibana.konservatif.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kibana
            port: 
              number: 5601

  - host: grafana.konservatif.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prom-grafana
            port: 
              number: 80
